--- a/E-shop MVC/Yeni MVC/NEW/Frontend/eshop_MVC/Views/Shared/_StylesPartialHead.cshtml
+++ b/E-shop MVC/Yeni MVC/NEW/Frontend/eshop_MVC/Views/Shared/_StylesPartialHead.cshtml
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <title>Asaf Ticatet</title>
+    <title>Asaf Ticaret</title>
 
 
     <!-- Additional CSS Files -->
